fixed word-wrap on the li

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,8 @@
 background-color: #627C85;
 border-radius: 14px;
 padding: 5px;
+max-width: 80%;
+word-wrap: break-word;
 }
 
 .message-li {
